; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-tcp-close-reset.c_connect_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-tcp-close-reset.c_connect_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@connect_req = common dso_local global i32 0, align 4
@tcp_client = common dso_local global i32 0, align 4
@alloc_cb = common dso_local global i32 0, align 4
@read_cb2 = common dso_local global i32 0, align 4
@client_close = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @connect_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @connect_cb(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = icmp eq i32* %5, @connect_req
  %7 = zext i1 %6 to i32
  %8 = call i32 @ASSERT(i32 %7)
  %9 = load i32, i32* @alloc_cb, align 4
  %10 = load i32, i32* @read_cb2, align 4
  %11 = call i32 @uv_read_start(i32* @tcp_client, i32 %9, i32 %10)
  %12 = call i32 @do_write(i32* @tcp_client)
  %13 = load i64, i64* @client_close, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = call i32 @do_close(i32* @tcp_client)
  br label %17

17:                                               ; preds = %15, %2
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_read_start(i32*, i32, i32) #1

declare dso_local i32 @do_write(i32*) #1

declare dso_local i32 @do_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
